--- a/app/src/main/res/layout/layout_flipper_banner.xml
+++ b/app/src/main/res/layout/layout_flipper_banner.xml
@@ -1,24 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:app="http://schemas.android.com/apk/res-auto"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <com.roubow.viewflipper.RoundViewFlipper
+    <ViewFlipper
         android:id="@+id/vf_banner"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:corner="4dp">
-    </com.roubow.viewflipper.RoundViewFlipper>
+        android:layout_height="match_parent"/>
 
     <LinearLayout
-        android:id="@+id/ll_dot_container"
+        android:id="@+id/ll_bottom_container"
         android:layout_width="match_parent"
-        android:layout_height="5dp"
-        android:orientation="horizontal"
+        android:layout_height="@dimen/banner_item_title_height"
         android:layout_gravity="bottom"
         android:gravity="center_horizontal"
-        android:layout_marginBottom="10dp">
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="@dimen/dimen_0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="6"
+            android:gravity="center_vertical"
+            android:paddingLeft="@dimen/dimen_10dp"
+            android:paddingRight="@dimen/dimen_10dp" />
+
+        <LinearLayout
+            android:id="@+id/ll_dot_container"
+            android:layout_width="@dimen/dimen_0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal" />
 
     </LinearLayout>
 
