--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -27,7 +27,8 @@
 
     <declare-styleable name="FlipperBanner">
         <attr name="fb_show_title" format="boolean"/>
-        <attr name="fb_title_background" format="color"/>
+        <attr name="fb_show_dot" format="boolean"/>
+        <attr name="fb_title_background" format="color|reference"/>
         <attr name="fb_dot_selected" format="reference"/>
         <attr name="fb_dot_normal" format="reference"/>
     </declare-styleable>
